# Reqruit

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md  deploy.sh  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
backend/: pyproject.toml  ruff.toml
backend/seeds/: market_config_IN.json  market_config_US.json
backend/src/: __init__.py
backend/src/agents/: __init__.py  achievement_miner.py  application_orchestrator.py  base.py  career_drift_detector.py  career_path_simulator.py  certification_roi_ranker.py  company_patterns.py  compensation_analyst.py  compensation_coach.py  cultural_coach.py  fit_scorer.py  interview_coach.py  interview_prep.py  jd_decoder.py  learning_path_architect.py  locale_advisor.py  negotiation_coach.py  offer_analyst.py  onboarding_coach.py  onboarding_plan.py  outreach.py  question_predictor.py  regional_resume.py  scam_detector.py  script_generator.py  service_exit_planner.py  skills_analyst.py  story_arc_builder.py  success_pattern.py  visa_navigator.py  weekly_review.py
backend/src/api/: dependencies.py  main.py
backend/src/core/: __init__.py  config.py  exceptions.py  logging.py  redis_client.py  security.py  token_encryptor.py
backend/src/db/: __init__.py  base_document.py  mongodb.py  seeds.py  weaviate_client.py
backend/src/guardrails/: __init__.py  input_validator.py  jd_red_flag_analyzer.py  output_validator.py  pii_detector.py
backend/src/integrations/: __init__.py  base_client.py  calendar_event_parser.py  email_parser.py  gmail_client.py  google_calendar_client.py  job_source_clients.py  market_data_client.py  verification_client.py
backend/src/llm/: cost_tracker.py  models.py
backend/src/memory/: recipes.py  retrieval.py  summarizer.py
backend/src/rag/: __init__.py  embeddings.py  retriever.py
backend/src/repositories/: application_repository.py  base.py  calendar_signal_repository.py  career_vitals_repository.py  company_repository.py  contact_repository.py  data_source_health_repository.py  document_repository.py  email_signal_repository.py  integration_connection_repository.py  interview_performance_repository.py  interview_repository.py  jd_cache_repository.py  job_repository.py  job_shortlist_repository.py  llm_usage_repository.py  market_config_repository.py  market_signal_repository.py  mock_session_repository.py  negotiation_session_repository.py  notification_repository.py  nudge_repository.py  offer_repository.py  onboarding_plan_repository.py  outreach_repository.py  profile_repository.py  refresh_token_repository.py  resume_repository.py  salary_benchmark_repository.py  scam_report_repository.py  skills_profile_repository.py  star_story_repository.py  success_tracker_repository.py  task_record_repository.py  usage_ledger_repository.py  user_activity_repository.py  user_repository.py  variable_pay_benchmark_repository.py
backend/src/services/: __init__.py  ats_export_service.py  ats_mapping_service.py  batch_and_breathe_scheduler.py  buyout_calculator_service.py  cross_industry_skill_mapper.py  currency_service.py  decision_framework.py  early_warning_service.py  effort_per_chance_engine.py  esop_valuation_service.py  external_data_service.py  gcc_career_ladder.py  indexing_service.py  integration_service.py  jd_cache_service.py  job_discovery_service.py  joining_prep_service.py  locale_service.py  market_positioning.py  market_signal_service.py  metrics_service.py  milestone_tracker.py  morale_service.py  nudge_engine.py  offer_comparison.py  outcome_service.py  push_notification_service.py  pwa_service.py  scam_detection_service.py  stepping_stone_pathfinder.py  streak_service.py  success_analytics.py  task_service.py  usage_service.py  variable_pay_risk_service.py
backend/src/tasks/: __init__.py  base.py  celery_app.py  cost_logging.py  cost_tasks.py  data_ingestion_tasks.py  discovery_tasks.py  health_task.py  integration_tasks.py  metrics.py
backend/src/workflows/: __init__.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
backend/tests/unit/: conftest.py  test_base_repository.py  test_batch_and_breathe_scheduler.py  test_career_vitals_document.py  test_cross_phase_contracts.py  test_documents.py  test_effort_per_chance_engine.py  test_joining_prep_service.py  test_market_signal_document.py  test_milestone_progress.py  test_morale_service.py  test_onboarding_graph.py  test_onboarding_plan.py  test_streak_service.py  test_user_activity.py  test_user_activity_repository.py  test_weekly_metrics.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.phase6.yml  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATA_MODEL.md  DETAILED_PLAN.md  DEVELOPMENT_GUIDE.md  GLOBAL_JOB_MARKET_RESEARCH.md  PROJECT_SUMMARY.md  api-contracts.md  architecture-scan.md  data-models-scan.md  deployment-guide.md  development-guide-scan.md  index.md  indian-job-market-research.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
frontend/: package.json  pnpm-lock.yaml  turbo.json
frontend/apps/web/: eslint.config.js  next.config.ts  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts
src/agents/: base.py  cover_letter.py
src/api/: __init__.py  dependencies.py  main.py
src/api/middleware/: __init__.py
src/core/: config.py  exceptions.py
src/db/: mongodb.py  weaviate_client.py
src/db/documents/: __init__.py  application.py  company.py  document_record.py  enums.py  interview.py  job.py  outreach_message.py  profile.py  resume.py  star_story.py  user.py
src/llm/: __init__.py  circuit_breaker.py  cost_tracker.py  manager.py  models.py
src/memory/: __init__.py  recipes.py  types.py
src/rag/: chunker.py
src/repositories/: __init__.py  base.py  cover_letter_embedding_repository.py  resume_chunk_repository.py  star_story_embedding_repository.py  weaviate_base.py
src/services/: indexing_service.py
src/workflows/: checkpointer.py
src/workflows/graphs/: __init__.py  (+1 more)
tests/: conftest.py
tests/unit/: test_documents.py  test_health.py
(+598 files in other folders)
